@@ -5,9 +5,15 @@ Nagios 3.x Change Log
 
 3.2.1 ????
 -----------------
+ENHANCEMENTS
+* Link to allow scheduling downtime for all services on a host (Hendrik Baecker)
+
+FIXES
 * Fix for compile on Fedora Core 3 (bug #0000082)
 * Fix for logging test, which was not timezone aware (bug #0000077 - Allan Clark)
 * Trivial cleanups for autoconf (Allan Clark)
+
+WARNINGS
 
 3.2.0 - 08/12/2009
 ------------------
